data/Java/13-bad-operand-types/2/[M]Error.txt
*https://stackoverflow.com/questions/5585779/how-do-i-convert-a-string-to-an-int-in-java
Main.java:7: error: error: bad operand types for binary operator '<'
  if (18>x) {
        ^